# ModelSEEDagent

./: .docs_review_state.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  COBRA_MULTIPROCESSING_FIX.md  DOCS.md  DOCUMENTATION_UPDATES_SUMMARY.md  DYNAMIC_AI_AGENT_ROADMAP.md  FINAL_INTERACTIVE_CLI_FIX.md  IMPLEMENTATION_PLAN.md  INTERACTIVE_CLI_COMPLETE_FIX.md  INTERACTIVE_CLI_FIXES_SUMMARY.md  INTERACTIVE_GUIDE.md  LICENSE  PHASE1_COMPLETION_SUMMARY.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  REPOSITORY_REVIEW_AND_IMPROVEMENT_PLAN.md  REPOSITORY_STATUS.md  USE_INTERACTIVE_CLI.md  ai_media_tools_test_results_20250610_175912.json  architecture_diagram.py  claude-code  combine_files.py  combined_output.txt  demo_analysis_report.json  demo_intelligent_analysis.py  direct_analysis_results_20250616_235455.json  documentation-updates.json  dynamic_media_test_results_20250610_171749.json  index.html  mkdocs.yml  modelseed-agent  output_bloat_comprehensive_assessment.md  output_size_assessment_20250616_235028.json  output_size_assessment_20250616_235224.json  pputida_test_model.json  prompt_review_analysis.md  (+55 more)
.github/: RELEASE_NOTES_TEMPLATE.md  release-drafter.yml
ARCHITECTURE/: index.html
TOOL_REFERENCE/: index.html
TOOL_TESTING_STATUS/: index.html
archive/: index.html
comprehensive_analysis_results/: find_minimal_media_result.json  identify_auxotrophies_result.json  run_flux_variability_analysis_result.json
config/: config.yaml.example.yaml
configuration/: index.html
debug/: index.html
deployment/: index.html
docs/: ARCHITECTURE.md  DEBUG_CONFIGURATION.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_ENHANCEMENTS.md  INTERACTIVE_GUIDE.md  PROJECT_STATUS.md  REPOSITORY_REVIEW_AND_IMPROVEMENT_PLAN.md  TOOL_REFERENCE.md  TOOL_TESTING_STATUS.md  configuration.md  debug.md  deployment.md  documentation-updates.json  documentation-updates.md  index.md  installation.md  interface_consistency_validation_report.md  learning-memory.md  monitoring.md  performance.md  smart-summarization.md  troubleshooting.md
documentation-updates/: index.html
examples/: README.md  __init__.py  intelligent_reasoning_demo.py  launch_with_argo.py  phase1_demonstration.py  phase2_demonstration.py  phase2_simple_demo.py  phase3_demonstration.py  phase3_simple_demo.py  phase4_comprehensive_demo.py  phase4_simple_demo.py  setup_environment.sh
installation/: index.html
interface_consistency_validation_report/: index.html
learning-memory/: index.html
logs/: README.md  migration_report.json
monitoring/: index.html
notebooks/: COMPLETION_SUMMARY.md  README.md  TUTORIAL_ORGANIZATION.md  argo.ipynb  cobrapy_testing.ipynb  comprehensive_working_tutorial.ipynb  debug.ipynb  iML1515_fluxes.csv  iML1515_pfba_fluxes.csv  local_llm.ipynb  setup_kernel.sh  utils.py
performance/: index.html
scripts/: README.md  README.txt  baseline_metrics.json  build_biochem_db.py  build_mvp_biochem_db.py  build_simple_biochem_db.py  claude_code_cli.py  cleanup_logs.py  cleanup_repository.py  comprehensive_tool_testbed.py  consolidate_incremental_results.py  demo_comprehensive_testbed.py  dev_validate.py  docs_review.py  docs_review_simple.py  fix_docs.py  generate_cli_reference.py  generate_tool_catalogue.py  generate_tool_pages.py  integrated_intelligence_validator.py  migrate_prompts.py  organize_logs.py  performance_analyzer.py  performance_test.py  quick_output_analysis.py  quick_validation_test.py  setup_biochem_database.py  setup_env.sh  setup_git_hooks.py  split_comprehensive_results.py  split_testbed_results.py  tool_testbed.py  tool_validation_suite.py  update_testing_docs.py  validation_comparison.py
search/: search_index.json
sessions/: 042e8334.json  04ed8461.json  14372695.json  3272de40.json  34a7321b.json  38297c0d.json  4babade5.json  4dcbeffb.json  4e73d14f.json  5ae89d9f.json  60aefb33.json  7ee5aeaf.json  86701e55.json  9ca12382.json  README.md  a627d60e.json  ab51c114.json  c01deab7.json  c0eaa5b6.json  c8aad045.json  c9a0df94.json  d0aef529.json  d2dcfab5.json  e4f104f9.json  e67333bd.json  ea8107ef.json  eb9a51e8.json  ebb7e70c.json  f2751ea8.json  f8afa1e6.json
smart-summarization/: index.html
(+1121 files in other folders)
